<resources>
    <string name="app_name">MovieApp</string>

    <string name="action_save">Save</string>

    <string name="content_description_add_movie">Add a movie</string>
    <string name="content_description_movie_image">Movie image</string>

    <string name="hint_title">Title</string>
    <string name="hint_image_url">Image URL</string>
    <string name="hint_details_url">Details URL</string>
    <string name="hint_rating">Rating</string>
    <string name="alert_all_fields_required">All fields are required!</string>
</resources>